0.5.5/_sources/gallery/add_labels_with_features.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_labels_with_features.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_add_labels_with_features.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_labels_with_features.py:


Add labels with features
========================

Display a labels layer with various features

.. tags:: layers, analysis

.. GENERATED FROM PYTHON SOURCE LINES 9-68



.. image-sg:: /gallery/images/sphx_glr_add_labels_with_features_001.png
   :alt: add labels with features
   :srcset: /gallery/images/sphx_glr_add_labels_with_features_001.png
   :class: sphx-glr-single-img





.. code-block:: Python



    import numpy as np
    from skimage import data
    from skimage.filters import threshold_otsu
    from skimage.measure import label
    from skimage.morphology import closing, remove_small_objects, square
    from skimage.segmentation import clear_border

    import napari

    image = data.coins()[50:-50, 50:-50]

    # apply threshold
    thresh = threshold_otsu(image)
    bw = closing(image > thresh, square(4))

    # remove artifacts connected to image border
    cleared = remove_small_objects(clear_border(bw), 20)

    # label image regions
    label_image = label(cleared)

    # initialise viewer with coins image
    viewer = napari.view_image(image, name='coins', rgb=False)

    # get the size of each coin (first element is background area)
    label_areas = np.bincount(label_image.ravel())[1:]

    # split coins into small or large
    size_range = max(label_areas) - min(label_areas)
    small_threshold = min(label_areas) + (size_range / 2)
    coin_sizes = np.where(label_areas > small_threshold, 'large', 'small')

    label_features = {
        'row': ['none']
        + ['top'] * 4
        + ['bottom'] * 4,  # background is row: none
        'size': ['none', *coin_sizes],  # background is size: none
    }

    colors = {1: 'white', 2: 'blue', 3: 'green', 4: 'red', 5: 'yellow',
              None: 'magenta'}
    # Here we provide a dict with color mappings for a subset of labels;
    # when passed to `add_labels`, using the `colormap` kwarg, it will be
    # internally converted to a `napari.utils.colormaps.DirectLabelColormap`
    # Note: we also provide a default color (`None` key) which will be used
    # by all other labels

    # add the labels
    label_layer = viewer.add_labels(
        label_image,
        name='segmentation',
        features=label_features,
        colormap=colors,
    )

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_labels_with_features.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_labels_with_features.ipynb <add_labels_with_features.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_labels_with_features.py <add_labels_with_features.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_labels_with_features.zip <add_labels_with_features.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
